updated game to make more convient to play mayor
